--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Technology bloggg</title>
 </head>
 <body>
-    <h1>Amazing articles I have found//ggg</h1>
+    <h1>Amazing articles I have found</h1>
 </body>
 </html>
