--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Name - Emerging Technology Blog</title>
+    <title>Agatha Niwinski - Emerging Technology Blog</title>
 </head>
 <body>
     <h1>Emerging Technologies</h1>
     <main>
         <!-- sample of a blog post -->
         <article>
-            <h2>article title here</h2>
+            <h2>Terrifying! Hacked Robodog Walks On Hind Legs</h2>
             <img src="" alt="article alt text here">
-            <a href="">Article link here</a>
-            <time>date goes here</time>
-            <p>Summary of the article and the technology it talks about</p>
+            <a href="">https://futurism.com/the-byte/hacked-robodog-walks-hind-legs</a>
+            <time>November 8, 2022</time>
+            <p>Researchers from Worcester Polytechnic Institute and ShanghaiTech University are learning how to create a robodog that can walk on two legs. This is an exciting glimse of the direction robodogs are heading. </p>
         </article>
         <!-- end of sample -->
     </main>
