--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technology blogg g</title>
-</head>
-<body>
-    <h1>Amazing articles I hjhjhjhfjfjhave found test</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Agatha Niwinski - Emerging Technology Blog</title>
+    </head>
+
+    <body>
+<main>
+    <!-- sample of a blog post -->
+    <article>
+        <h2>Terrifying! Hacked Robodog Walks On Hind Legs</h2>
+        <img src="https://www.topgear.com/sites/default/files/2022/08/594213.jpg?w=892&h=502" alt="article alt text here">
+        <a href="https://futurism.com/the-byte/hacked-robodog-walks-hind-legs">https://futurism.com/the-byte/hacked-robodog-walks-hind-legs</a>
+        <time>November 8, 2022</time>
+        <p>Researchers from Worcester Polytechnic Institute and ShanghaiTech University are learning how to create a robodog that can walk on two legs. This is an exciting glimse of the direction robodogs are heading. </p>
+    </article>
+    <!-- end of sample -->
+</main>
+
 </html>
