--- a/index.html
+++ b/index.html
@@ -21,4 +21,21 @@
 <!-- end of sample -->
 </main>
 
+<main>
+    <!-- article 2 -->
+    <article>
+        <h2>Are you ready for workplace brain scanning?</h2>
+        <img src="https://spectrum.ieee.org/media-library/a-photo-collage-showing-a-man-wearing-a-eeg-headset-while-looking-at-a-computer-screen.jpg?id=32102531&width=1200&height=1500" alt="image of man with headphones"/>
+        <a href="https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr">https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr</a>
+        <time>November 19, 2022</time>
+        <p>Neurotechnology may be used in future workplaces to make workers more efficient and happier. This technology will use Electroencephalography (EEG) that 
+        can make sure people are right for the job they are doing. An example of using this technology is analyzing if a person can be a TSA agent and quickly 
+        identify a weapon in a suitcase. </p>
+    </article>
+    <!-- end -->
+    </main>
+
+
+
+
 </html>
