--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
     <!-- end -->
     </main>
 
-
-
+    <main>
+        <!-- article 3 -->
+        <article>
+            <h2>Musk's company aims to soon test brain implant in people</h2>
+            <img src="https://www.ctvnews.ca/content/dam/ctvnews/en/images/2022/12/1/musk-neuralink-demo-1-6177642-1669941402202.jpg" alt="image of Elon Musk"/>
+            <a href="https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626">https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626</a>
+            <time>December 2, 2022</time>
+            <p>Musk is in the process of asking permission to the US regulators to test the brain implant device. The Neuralink device is around the size of a large coin and contains wires that go
+                directly into the brain. Musk says that the main focus for this device is to treat vision and muscle impairments. </p>
+        </article>
+        <!-- end -->
+        </main>
+    
+    </body>
 
 </html>
