--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agatha Niwinski - Emerging Technology Blog</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -13,9 +14,9 @@
 <!-- sample of a blog post -->
 <article>
     <h2>Terrifying! Hacked Robodog Walks On Hind Legs</h2>
-    <img src="https://www.topgear.com/sites/default/files/2022/08/594213.jpg?w=892&h=502" alt="article alt text here">
-    <a href="https://futurism.com/the-byte/hacked-robodog-walks-hind-legs">https://futurism.com/the-byte/hacked-robodog-walks-hind-legs</a>
-    <time>November 8, 2022</time>
+    <img src="https://www.topgear.com/sites/default/files/2022/08/594213.jpg?w=892&h=502" alt="article alt text here"> <br>
+    <a href="https://futurism.com/the-byte/hacked-robodog-walks-hind-legs">Full Article</a> <br>
+    <time>November 8, 2022</time><br>
     <p>Researchers from Worcester Polytechnic Institute and ShanghaiTech University are learning how to create a robodog that can walk on two legs. This is an exciting glimse of the direction robodogs are heading. </p>
 </article>
 <!-- end of sample -->
@@ -25,9 +26,9 @@
     <!-- article 2 -->
     <article>
         <h2>Are you ready for workplace brain scanning?</h2>
-        <img src="https://spectrum.ieee.org/media-library/a-photo-collage-showing-a-man-wearing-a-eeg-headset-while-looking-at-a-computer-screen.jpg?id=32102531&width=1200&height=1500" alt="image of man with headphones"/>
-        <a href="https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr">https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr</a>
-        <time>November 19, 2022</time>
+        <img src="https://spectrum.ieee.org/media-library/a-photo-collage-showing-a-man-wearing-a-eeg-headset-while-looking-at-a-computer-screen.jpg?id=32102531&width=1200&height=1500" alt="image of man with headphones"/> <br>
+        <a href="https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr">Full Article</a> <br>
+        <time>November 19, 2022</time> <br>
         <p>Neurotechnology may be used in future workplaces to make workers more efficient and happier. This technology will use Electroencephalography (EEG) that 
         can make sure people are right for the job they are doing. An example of using this technology is analyzing if a person can be a TSA agent and quickly 
         identify a weapon in a suitcase. </p>
@@ -38,10 +39,10 @@
     <main>
         <!-- article 3 -->
         <article>
-            <h2>Musk's company aims to soon test brain implant in people</h2>
-            <img src="https://www.ctvnews.ca/content/dam/ctvnews/en/images/2022/12/1/musk-neuralink-demo-1-6177642-1669941402202.jpg" alt="image of Elon Musk"/>
-            <a href="https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626">https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626</a>
-            <time>December 2, 2022</time>
+            <h2>Musk's company aims to soon test brain implant in people</h2> 
+            <img src="https://www.ctvnews.ca/content/dam/ctvnews/en/images/2022/12/1/musk-neuralink-demo-1-6177642-1669941402202.jpg" alt="image of Elon Musk"/>  <br>
+            <a href="https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626">Full Article</a> <br>
+            <time>December 2, 2022</time> <br>
             <p>Musk is in the process of asking permission to the US regulators to test the brain implant device. The Neuralink device is around the size of a large coin and contains wires that go
                 directly into the brain. Musk says that the main focus for this device is to treat vision and muscle impairments. </p>
         </article>
