--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 
 <body>
 <main>
-<!-- sample of a blog post -->
-<article>
+<!-- article 1 -->
+<article class="art1">
     <h2>Terrifying! Hacked Robodog Walks On Hind Legs</h2>
-    <img src="https://www.topgear.com/sites/default/files/2022/08/594213.jpg?w=892&h=502" alt="article alt text here"> <br>
-    <a href="https://futurism.com/the-byte/hacked-robodog-walks-hind-legs">Full Article</a> <br>
-    <time>November 8, 2022</time><br>
-    <p>Researchers from Worcester Polytechnic Institute and ShanghaiTech University are learning how to create a robodog that can walk on two legs. This is an exciting glimse of the direction robodogs are heading. </p>
+    <img src="https://www.topgear.com/sites/default/files/2022/08/594213.jpg?w=892&h=502" alt="article alt text here"> 
+    <a href="https://futurism.com/the-byte/hacked-robodog-walks-hind-legs" target="_blank">Full Article</a> 
+    <time>November 8, 2022</time>
+    <p>Researchers from Worcester Polytechnic Institute and ShanghaiTech University are learning how to create a robodog that can walk on two legs. This is an exciting glimse of the direction robodogs are heading. 
+        If robot dogs were able to walk on 2 legs instead of 4 it would give them more freedom with their movements and allow them to climb more objects.
+    </p>
 </article>
 <!-- end of sample -->
 </main>
 
 <main>
     <!-- article 2 -->
-    <article>
+    <article class="art2">
         <h2>Are you ready for workplace brain scanning?</h2>
-        <img src="https://spectrum.ieee.org/media-library/a-photo-collage-showing-a-man-wearing-a-eeg-headset-while-looking-at-a-computer-screen.jpg?id=32102531&width=1200&height=1500" alt="image of man with headphones"/> <br>
-        <a href="https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr">Full Article</a> <br>
-        <time>November 19, 2022</time> <br>
+        <img src="https://spectrum.ieee.org/media-library/a-photo-collage-showing-a-man-wearing-a-eeg-headset-while-looking-at-a-computer-screen.jpg?id=32102531&width=1200&height=1500" alt="image of man with headphones"/> 
+        <a href="https://spectrum.ieee.org/neurotech-workplace-innereye-emotiv#toggle-gdpr" target="_blank">Full Article</a> 
+        <time>November 19, 2022</time> 
         <p>Neurotechnology may be used in future workplaces to make workers more efficient and happier. This technology will use Electroencephalography (EEG) that 
         can make sure people are right for the job they are doing. An example of using this technology is analyzing if a person can be a TSA agent and quickly 
         identify a weapon in a suitcase. </p>
@@ -38,17 +40,32 @@
 
     <main>
         <!-- article 3 -->
-        <article>
+        <article class="art3">
             <h2>Musk's company aims to soon test brain implant in people</h2> 
-            <img src="https://www.ctvnews.ca/content/dam/ctvnews/en/images/2022/12/1/musk-neuralink-demo-1-6177642-1669941402202.jpg" alt="image of Elon Musk"/>  <br>
-            <a href="https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626">Full Article</a> <br>
-            <time>December 2, 2022</time> <br>
+            <img src="https://www.ctvnews.ca/content/dam/ctvnews/en/images/2022/12/1/musk-neuralink-demo-1-6177642-1669941402202.jpg" alt="image of Elon Musk"/> 
+            <a href="https://www.ctvnews.ca/sci-tech/musk-s-company-aims-to-soon-test-brain-implant-in-people-1.6177626" target="_blank">Full Article</a> 
+            <time>December 2, 2022</time> 
             <p>Musk is in the process of asking permission to the US regulators to test the brain implant device. The Neuralink device is around the size of a large coin and contains wires that go
                 directly into the brain. Musk says that the main focus for this device is to treat vision and muscle impairments. </p>
         </article>
         <!-- end -->
         </main>
     
+        <main>
+            <!-- article 4 -->
+            <article class="art4">
+                <h2>San Francisco makes U-turn on 'killer robots' plan</h2> 
+                <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/8F55/production/_127839663_untitled1.png.webp" alt="Robot equipped with claw"/>  
+                <a href="https://www.bbc.com/news/technology-63883235" target="_blank">Full Article</a> 
+                <time>December 7, 2022</time> 
+                <p>San Francisco has reversed its decision to allow police officers to use robots that are equipped with lethal weapons. If San Francisco went ahead with this decision the police force 
+                    would have the authority to kill suspects with robots. Part of this decision comes from the idea that if robots where used to kill it would distance officers from the emotional aspect of killing. 
+                The original proposal will now be refined or entirely scrapped.</p>
+            </article>
+            <!-- end -->
+            </main>
+
+
     </body>
 
 </html>
